Issue #1393: object_richcompare() returns NotImplemented instead of  False if the objects aren't equal, to give the other side a chance.